--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.10", features = ["derive"] }
 itertools = "0.12.0"
+once_cell = "1.18.0"
+regex = "1.10.2"
 rust-embed = "8.0.0"
